# Demo-Games101

./: .gitignore  CMakeLists.txt  clean.sh  run.sh
.github/workflows/: build.yml
a0/: CMakeLists.txt  main.cpp  run.sh
a1/: CMakeLists.txt  main.cpp  rasterizer.hpp  run.sh  triangle.cpp
a2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp  run.sh
a3/: CMakeLists.txt  main.cpp  objloader.h  rasterizer.cpp  rasterizer.hpp  run.sh  shader.hpp  texture.hpp  triangle.cpp  triangle.hpp
a5/: CMakeLists.txt  light.hpp  main.cpp  object.hpp  renderer.cpp  renderer.hpp  run.sh  scene.hpp  sphere.hpp  triangle.hpp
a6/: CMakeLists.txt  bounds3.hpp  bvh.cpp  bvh.hpp  global.hpp  intersection.hpp  main.cpp  material.hpp  object.hpp  ray.hpp  renderer.cpp  renderer.hpp  run.sh  scene.cpp  scene.hpp  sphere.hpp  triangle.hpp
a7/: CMakeLists.txt  bounds3.hpp  bvh.cpp  bvh.hpp  global.hpp  intersection.hpp  main.cpp  material.hpp  object.hpp  objloader.hpp  ray.hpp  renderer.cpp  run.sh  scene.cpp  scene.hpp  sphere.hpp  triangle.hpp  vector.hpp
